--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,23 @@
-body{
+body {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
+
+#root {
+    display: flex;
+    justify-content: flex-start;
+    height: 100vh;
+}
+
 .dialog-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
+    position: fixed;
     top: 75px;
     width: 100%;
     height: 10vh;
