--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,7 @@ body {
         background-position: 0 50%;
     }
 }
+
 .dialog-container {
     display: flex;
     justify-content: center;
@@ -60,8 +61,15 @@ body {
     z-index: 1;
 }
 
+.attendance-form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2em;
+    margin-left: 4em;
+}
+
 .button {
-    display: inline-block;
     border: 1px solid #4f4f4f;
     border-radius: 4px;
     transition: all 0.2s ease-in;
@@ -71,6 +79,9 @@ body {
     z-index: 1;
     background-color: #043C5E;
     color: #BFDBF7;
+    width: 10em;
+    height: 26px;
+    padding: 0;
 }
 
 .button:before {
@@ -121,3 +132,34 @@ body {
     background-color: #DFD5A5;
     transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
 }
+
+select {
+    appearance: none;
+    outline: none;
+    box-shadow: none;
+    text-align: center;
+    transition: all 0.2s ease-in;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    background-color: #043C5E;
+    color: #BFDBF7;
+    width: 8em;
+    height: 26px;
+    border: 1px solid #4f4f4f;
+    border-radius: 4px;
+}
+
+select:hover {
+    border: 1px solid #DFD5A5;
+    color: #DFD5A5;;
+}
+
+.clock {
+    border: 1px solid #DFD5A5;
+    padding: 0.5em;
+    color: #043C5E;
+}
+
+
+
