--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@ body {
     margin-left: 4em;
 }
 
-.button {
+button {
     border: 1px solid #4f4f4f;
     border-radius: 4px;
     transition: all 0.2s ease-in;
@@ -84,7 +84,7 @@ body {
     padding: 0;
 }
 
-.button:before {
+button:before {
     content: "";
     position: absolute;
     left: 50%;
@@ -99,7 +99,7 @@ body {
     z-index: -1;
 }
 
-.button:after {
+button:after {
     content: "";
     position: absolute;
     left: 55%;
@@ -114,19 +114,19 @@ body {
     z-index: -1;
 }
 
-.button:hover {
+button:hover {
     border: 1px solid #DFD5A5;
     color: #043C5E;
 }
 
-.button:hover:before {
+button:hover:before {
     top: -35%;
     color: #043C5E;
     background-color: #DFD5A5;
     transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
 }
 
-.button:hover:after {
+button:hover:after {
     top: -45%;
     color: #043C5E;
     background-color: #DFD5A5;
