--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,7 @@ body {
     z-index: 1;
 }
 
-.attendance-form {
+.container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -186,6 +186,26 @@ select::-webkit-scrollbar-track {
 
 select::-webkit-scrollbar-corner {
     background: transparent;
+}
+
+input[type="datetime-local"] {
+    text-align: center;
+    cursor: pointer;
+    background-color: #043C5E;
+    color: #BFDBF7;
+    width: 12em;
+    height: 26px;
+    border: 1px solid #3da4bb;
+    border-radius: 4px;
+}
+
+input[type="datetime-local"]::-webkit-calendar-picker-indicator {
+    border-color: #BFDBF7;
+}
+
+input[type="datetime-local"]:hover {
+    border: 1px solid #DFD5A5;
+    color: #DFD5A5;;
 }
 
 ::-webkit-scrollbar {
