--- a/src/index.css
+++ b/src/index.css
@@ -44,29 +44,44 @@ body {
     justify-content: center;
     align-items: center;
     position: fixed;
-    top: 75px;
     width: 100%;
-    height: 10vh;
-    z-index: 1;
+    height: 100vh;
+    z-index: 99;
 }
 
 .dialog {
-    width: 80%;
-    height: 100%;
-    border: 1px solid black;
+    position: absolute;
+    min-width: 30%;
+    border: none;
+    border-radius: 5px;
     display: flex;
+    top: 75px;
     justify-content: center;
     align-items: center;
-    background-color: white;
+    background-color: #043C5E;
     z-index: 1;
 }
 
+.dialog-message {
+    font-size: 1.2em;
+    color: #BFDBF7;
+    margin: 1em;
+}
+
 .container {
+    border-top: 1px solid #043c5e;
+    margin-top: 1em;
+}
+
+.container-form {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    gap: 2em;
+    column-gap: 2em;
+    row-gap: 0.5em;
     margin-left: 4em;
+    padding-top: 1em;
+    flex-wrap: wrap;
 }
 
 button {
@@ -76,10 +91,10 @@ button {
     position: relative;
     overflow: hidden;
     cursor: pointer;
-    z-index: 1;
     background-color: #043C5E;
     color: #BFDBF7;
     width: 10em;
+    z-index: 1;
     height: 26px;
     padding: 0;
 }
