--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,34 @@ body {
     height: 100vh;
 }
 
+header {
+    width: 100%;
+    background-color: #043c5e;
+    color: #BFDBF7;
+    display: flex;
+    height: 3em;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.header-container {
+    margin-left: 1em;
+    color: #3da4bb;
+    display: flex;
+    height: 3em;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.header-container:hover {
+    color: #BFDBF7;
+}
+
+.active {
+    color: #BFDBF7;
+    text-decoration-line: underline;
+}
 
 .loading {
     width: 100%;
@@ -159,7 +187,7 @@ select {
     overflow: hidden;
     cursor: pointer;
     background-color: #043C5E;
-    color: #BFDBF7;
+    color: #86a9cb;
     width: 8em;
     height: 26px;
     border: 1px solid #3da4bb;
@@ -209,7 +237,7 @@ input[type="datetime-local"] {
     text-align: center;
     cursor: pointer;
     background-color: #043C5E;
-    color: #BFDBF7;
+    color: #86a9cb;
     width: 12em;
     height: 26px;
     border: 1px solid #3da4bb;
@@ -244,7 +272,7 @@ input[type="text"]:hover {
 }
 
 input::placeholder {
-    color: #BFDBF7;;
+    color: #86a9cb;
 }
 
 input:hover::placeholder {
