--- a/src/index.css
+++ b/src/index.css
@@ -5,20 +5,20 @@ body {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-style: normal;
-    background-color: #1F7A8C;
-    color: #BFDBF7;
+    background-color: white;
+    color: #D8C4B6;
 }
 
 #root {
     display: flex;
     justify-content: flex-start;
     height: 100vh;
+    width: 100vw;
 }
 
 header {
     width: 100vw;
-    background-color: #043c5e;
-    color: #BFDBF7;
+    background-color: #3E5879;
     display: flex;
     height: 3em;
     justify-content: flex-start;
@@ -27,7 +27,6 @@ header {
 
 .header-field {
     margin-left: 1em;
-    color: #3da4bb;
     display: flex;
     height: 3em;
     justify-content: center;
@@ -36,11 +35,11 @@ header {
 }
 
 .header-field:hover {
-    color: #BFDBF7;
+    color: #F5EFE7;
 }
 
 .active {
-    color: #BFDBF7;
+    color: #F5EFE7;
     text-decoration-line: underline;
 }
 
@@ -50,7 +49,8 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(135deg, #BFDBF7, #1F7A8C, #043C5E);
+    background: linear-gradient(135deg, #F5EFE7, #D8C4B6, #3E5879);
+    color: #213555;
     background-size: 400% 400%;
     animation: gradientShift 2s ease infinite;
 }
@@ -113,14 +113,15 @@ header {
 }
 
 button {
-    border: 1px solid #DFD5A5;
+    box-shadow: 0 0 5px #3E5879;
+    border: none;
     border-radius: 4px;
     transition: all 0.2s ease-in;
     position: relative;
     overflow: hidden;
     cursor: pointer;
-    background-color: #043C5E;
-    color: #BFDBF7;
+    background-color: #3E5879;
+    color: #D8C4B6;
     width: 10em;
     z-index: 1;
     height: 26px;
@@ -150,7 +151,7 @@ button:after {
     top: 180%;
     width: 160%;
     height: 190%;
-    background-color: #DFD5A5;
+    background-color: #D8C4B6;
     border-radius: 50%;
     display: block;
     transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
@@ -158,22 +159,20 @@ button:after {
 }
 
 button:hover {
-    border: 1px solid #DFD5A5;
-    color: #043C5E;
-    box-shadow: 0 0 5px #BFDBF7;
+    color: #3E5879;
 }
 
 button:hover:before {
     top: -35%;
-    color: #043C5E;
-    background-color: #DFD5A5;
+    color: #3E5879;
+    background-color: #D8C4B6;
     transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
 }
 
 button:hover:after {
     top: -45%;
-    color: #043C5E;
-    background-color: #DFD5A5;
+    color: #3E5879;
+    background-color: #D8C4B6;
     transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
 }
 
@@ -186,18 +185,16 @@ select {
     position: relative;
     overflow: hidden;
     cursor: pointer;
-    background-color: #043C5E;
-    color: #86a9cb;
+    background-color: #3E5879;
+    color: #D8C4B6;
     width: 8em;
     height: 26px;
-    border: 1px solid #3da4bb;
+    border: none;
     border-radius: 4px;
 }
 
 select:hover {
-    border: 1px solid #DFD5A5;
-    color: #DFD5A5;
-    box-shadow: 0 0 5px #BFDBF7;
+    color: #F5EFE7;
 }
 
 .clock {
@@ -218,14 +215,14 @@ select::-webkit-scrollbar-button {
 }
 
 select::-webkit-scrollbar-thumb {
-    background: #043c5e;
-    border: 0 none #ffffff;
+    background: #F5EFE7;
+    border: none;
     border-radius: 50px;
 }
 
 select::-webkit-scrollbar-track {
-    background: #3da4bb;
-    border: 0 none #ffffff;
+    background: #3E5879;
+    border: none;
     border-radius: 50px;
 }
 
@@ -236,11 +233,11 @@ select::-webkit-scrollbar-corner {
 input[type="datetime-local"] {
     text-align: center;
     cursor: pointer;
-    background-color: #043C5E;
-    color: #86a9cb;
+    background-color: #3E5879;
+    color: #D8C4B6;
     width: 12em;
     height: 26px;
-    border: 1px solid #3da4bb;
+    border: none;
     border-radius: 4px;
 }
 
@@ -249,26 +246,22 @@ input[type="datetime-local"]::-webkit-calendar-picker-indicator {
 }
 
 input[type="datetime-local"]:hover {
-    border: 1px solid #DFD5A5;
-    color: #DFD5A5;;
-    box-shadow: 0 0 5px #BFDBF7;
+    color: #F5EFE7;;
 }
 
 input[type="text"] {
     text-align: center;
     cursor: pointer;
-    background-color: #043C5E;
-    color: #BFDBF7;
+    background-color: #3E5879;
+    color: #D8C4B6;
     width: 12em;
     height: 26px;
-    border: 1px solid #3da4bb;
+    border: none;
     border-radius: 4px;
 }
 
 input[type="text"]:hover {
-    border: 1px solid #DFD5A5;
-    color: #DFD5A5;;
-    box-shadow: 0 0 5px #BFDBF7;
+    color: #F5EFE7;;
 }
 
 input::placeholder {
@@ -282,52 +275,46 @@ input:hover::placeholder {
 input[type="email"] {
     text-align: center;
     cursor: pointer;
-    background-color: #043C5E;
-    color: #BFDBF7;
+    background-color: #3E5879;
+    color: #D8C4B6;
     width: 12em;
     height: 26px;
-    border: 1px solid #3da4bb;
+    border: none;
     border-radius: 4px;
 }
 
 input[type="email"]:hover {
-    border: 1px solid #DFD5A5;
-    color: #DFD5A5;;
-    box-shadow: 0 0 5px #BFDBF7;
+    color: #F5EFE7;;
 }
 
 input[type="tel"] {
     text-align: center;
     cursor: pointer;
-    background-color: #043C5E;
-    color: #BFDBF7;
+    background-color: #3E5879;
+    color: #D8C4B6;
     width: 12em;
     height: 26px;
-    border: 1px solid #3da4bb;
+    border: none;
     border-radius: 4px;
 }
 
 input[type="tel"]:hover {
-    border: 1px solid #DFD5A5;
-    color: #DFD5A5;;
-    box-shadow: 0 0 5px #BFDBF7;
+    color: #F5EFE7;;
 }
 
 input[type="password"] {
     text-align: center;
     cursor: pointer;
-    background-color: #043C5E;
-    color: #BFDBF7;
+    background-color: #3E5879;
+    color: #D8C4B6;
     width: 12em;
     height: 26px;
-    border: 1px solid #3da4bb;
+    border: none;
     border-radius: 4px;
 }
 
 input[type="password"]:hover {
-    border: 1px solid #DFD5A5;
-    color: #DFD5A5;;
-    box-shadow: 0 0 5px #BFDBF7;
+    color: #F5EFE7;;
 }
 
 ::-webkit-scrollbar {
@@ -341,31 +328,31 @@ input[type="password"]:hover {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #043c5e;
-    border: 0 none #ffffff;
+    background: #F5EFE7;
+    border: 0 none;
     border-radius: 50px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #bfd3f7;
+    background: #F5EFE7;
 }
 
 ::-webkit-scrollbar-thumb:active {
-    background: #bfd3f7;
+    background: #F5EFE7;
 }
 
 ::-webkit-scrollbar-track {
-    background: #3da4bb;
-    border: 0 none #ffffff;
+    background: #3E5879;
+    border: none;
     border-radius: 50px;
 }
 
 ::-webkit-scrollbar-track:hover {
-    background: #043c5e;
+    background: #3E5879;
 }
 
 ::-webkit-scrollbar-track:active {
-    background: #043c5e;
+    background: #3E5879;
 }
 
 ::-webkit-scrollbar-corner {
