--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,12 @@ header {
     align-items: center;
 }
 
+.icon {
+    margin-left: 1em;
+    width: 2em;
+    height: 2em;
+}
+
 .header-field {
     margin-left: 1em;
     display: flex;
@@ -77,6 +83,10 @@ header {
     z-index: 99;
 }
 
+.dialog-container button {
+    box-shadow: 0 0 3px #D8C4B6;
+}
+
 .dialog {
     position: absolute;
     min-width: 30%;
@@ -92,7 +102,7 @@ header {
 
 .dialog-message {
     font-size: 1.2em;
-    color: #BFDBF7;
+    color: #D8C4B6;
     margin: 1em;
 }
 
@@ -336,7 +346,8 @@ a {
     text-align: center;
     background-color: #3E5879;
     color: #D8C4B6;
-    width: 12em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
     height: 26px;
     border: none;
     border-radius: 4px;
@@ -344,6 +355,7 @@ a {
     justify-content: center;
     align-items: center;
     font-size: small;
+    box-shadow: 0 0 5px #3E5879;
 }
 
 ::-webkit-scrollbar {
