--- a/src/index.css
+++ b/src/index.css
@@ -148,6 +148,13 @@ input:focus {
     height: 0;
 }
 
+.attendance-clock {
+    box-shadow: 0 0 5px #3E5879;
+    border-radius: 50%;
+    margin: 0;
+    padding: 0;
+}
+
 button {
     box-shadow: 0 0 5px #3E5879;
     border: none;
