--- a/src/index.css
+++ b/src/index.css
@@ -154,16 +154,38 @@ input:focus {
 }
 
 .motd-container {
-    width: 100vw;
-    max-height: 100vh;
+    width: 90vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 1em auto;
+}
+
+.motd-fields-container {
+    width: 100%;
+    text-align: center;
     overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
     box-shadow: 0 0 5px #3E5879;
-    margin-top: 1em;
-    margin-bottom: 1em;
     padding: 0.5em;
+    object-fit: contain;
+}
+
+.rendered-motd-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    box-shadow: 0 0 5px #3E5879;
+    border: none;
+    border-radius: 4px;
+    overflow: hidden;
+    object-fit: contain;
+    padding: 0.5em;
+    width: 50vw;
 }
 
 button {
