--- a/src/index.css
+++ b/src/index.css
@@ -128,8 +128,8 @@ hr {
     row-gap: 0.5em;
     margin-left: 2em;
     margin-right: 2em;
-    padding-top: 1em;
-    padding-bottom: 1em;
+    margin-top: 1em;
+    margin-bottom: 1em;
     flex-wrap: wrap;
 }
 
@@ -161,7 +161,6 @@ input:focus {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-
 }
 
 .motd-fields-container {
@@ -175,6 +174,7 @@ input:focus {
     box-shadow: 0 0 5px #3E5879;
     padding: 0.5em;
     object-fit: contain;
+    margin-bottom: 0.5em;
 }
 
 .rendered-motd-container {
