--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,14 @@
 body {
-    margin: 0;
     padding: 0;
+    margin: 0;
+    border: none;
     box-sizing: border-box;
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-style: normal;
     background-color: #f6f2e0;
     color: #D8C4B6;
+    overflow-x: hidden;
 }
 
 #root {
@@ -155,7 +157,7 @@ input:focus {
 
 .motd-container {
     margin: 1em auto;
-    width: calc(100% - 8em);
+    max-width: calc(100% - 8em);
     display: flex;
     justify-content: center;
     align-items: center;
