--- a/src/index.css
+++ b/src/index.css
@@ -194,10 +194,31 @@ input:focus {
     width: 50vw;
 }
 
+.user-edit-form-container {
+    gap: 2em !important;
+}
+
+.user-card-block {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 0 5px #D8C4B6;
+    border-radius: 5px;
+    min-height: 1em;
+    padding: 0.5em;
+}
+
 .user-list {
     flex-direction: column !important;
     align-items: flex-start;
-    width: 60vw;
+    width: 45vw;
+    min-width: 15em;
+}
+
+.user-card-icon {
+    margin-right: auto;
+    margin-left: 1em;
+    box-shadow: 0 0 5px #D8C4B6;
 }
 
 .user-edit-form {
@@ -211,13 +232,19 @@ input:focus {
 }
 
 .user-card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5em;
+    flex-wrap: wrap;
     background-color: #3E5879;
     box-shadow: 0 0 5px #3E5879;
     border: none;
     border-radius: 5px;
     margin-bottom: 0.5em;
-    padding: 0.5em;
     cursor: pointer;
+    min-height: 2em;
+    padding: 0.7em 1em 0.7em 0.7em;
 }
 
 button {
