--- a/src/index.css
+++ b/src/index.css
@@ -10,13 +10,21 @@ body {
     color: #D8C4B6;
     overflow-x: hidden;
     height: 100vh;
-    width: 100vw;}
+    width: 100vw;
+}
+
+.body {
+    height: 100vh;
+    width: 100vw;
+}
 
 #root {
     display: flex;
     justify-content: flex-start;
     height: 100vh;
     width: 100vw;
+    padding: 0;
+    margin: 0;
 }
 
 header {
