--- a/src/index.css
+++ b/src/index.css
@@ -408,6 +408,25 @@ input[type="datetime-local"]:hover {
     color: #F5EFE7;;
 }
 
+input[type="date"] {
+    text-align: center;
+    cursor: pointer;
+    background-color: #3E5879;
+    color: #D8C4B6;
+    width: 12em;
+    height: 26px;
+    border: none;
+    border-radius: 4px;
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+    cursor: pointer;
+}
+
+input[type="date"]:hover {
+    color: #F5EFE7;;
+}
+
 input[type="text"] {
     text-align: center;
     background-color: #3E5879;
