--- a/src/index.css
+++ b/src/index.css
@@ -277,10 +277,10 @@ button {
     cursor: pointer;
     background-color: #3E5879;
     color: #D8C4B6;
-    width: 10em;
+    padding-left: 1em;
+    padding-right: 1em;
     z-index: 1;
     height: 26px;
-    padding: 0;
 }
 
 button:active {
@@ -417,6 +417,7 @@ input[type="date"] {
     height: 26px;
     border: none;
     border-radius: 4px;
+    margin-right: 15px;
 }
 
 input[type="date"]::-webkit-calendar-picker-indicator {
