--- a/src/index.css
+++ b/src/index.css
@@ -428,6 +428,26 @@ input[type="date"]:hover {
     color: #F5EFE7;;
 }
 
+input[type="month"] {
+    text-align: center;
+    cursor: pointer;
+    background-color: #3E5879;
+    color: #D8C4B6;
+    width: 12em;
+    height: 26px;
+    border: none;
+    border-radius: 4px;
+    margin-right: 15px;
+}
+
+input[type="month"]::-webkit-calendar-picker-indicator {
+    cursor: pointer;
+}
+
+input[type="month"]:hover {
+    color: #F5EFE7;;
+}
+
 input[type="text"] {
     text-align: center;
     background-color: #3E5879;
@@ -475,7 +495,7 @@ input[type="tel"] {
 }
 
 input[type="tel"]:hover {
-    color: #F5EFE7;;
+    color: #F5EFE7;
 }
 
 input[type="password"] {
