--- a/src/index.css
+++ b/src/index.css
@@ -394,6 +394,22 @@ select::-webkit-scrollbar-corner {
     background: transparent;
 }
 
+input[type="file"] {
+    text-align: center;
+    cursor: pointer;
+    background-color: #3E5879;
+    color: #D8C4B6;
+    width: 12em;
+    height: 26px;
+    border: none;
+    border-radius: 4px;
+    margin-right: 15px;
+}
+
+input[type="file"]:hover {
+    color: #F5EFE7;;
+}
+
 input[type="datetime-local"] {
     text-align: center;
     cursor: pointer;
