--- a/src/index.css
+++ b/src/index.css
@@ -452,9 +452,14 @@ input[type="file"] {
     align-items: center;
     text-align: center;
     position: absolute;
-    width: 8em;
-    height: 9em;
+    overflow: hidden;
+    max-width: 5em;
+    height: 7em;
     z-index: 1;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-word;
+    white-space: normal;
     color: #3E5879;
 }
 
